Улучшения в контейнере "Услуги и Фото"

--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ h5 {
 .container-service {
   max-width: 1440px;
   display: grid;
-  grid-template-columns: 100px 1fr 1fr 1fr 1fr 100px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .container-betters {
@@ -231,4 +231,8 @@ h5 {
   max-width: 1440px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+}
+.service-centered {
+  margin: 0 auto;
+  width: 268px;
 }
